# kinematics

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: dh_param.rs  forward.rs  inverse.rs  jacobian.rs  lib.rs  workspace.rs
